<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_detail">CRIME DETAIL</string>
    <string name="detail">Detail</string>
    <string name="button_add">Wed Nov 14 11:56 EST 2018</string>
    <string name="solved">Solved</string>
    <string name="police">Police</string>
    <string name="new_crime">New Crime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_suspects">Choose suspects</string>

    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is unsolved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report</string>

</resources>