<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/textView_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/crime_title"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_detail"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/editText_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/detail"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_add"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        />

    <CheckBox
        android:id="@+id/checkBox_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solved" />

    <Button
        android:id="@+id/button_choose_suspects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_suspects" />

    <Button
        android:id="@+id/button_send_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Send Crime Report" />

    <Button
        android:id="@+id/button_call_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Call suspect" />
</androidx.appcompat.widget.LinearLayoutCompat>